--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@ find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIR})
 include_directories("${gtest_SOURCE_DIR}/include")
 
-#set(SOURCE_FILES main.cpp Chip8.cpp Chip8.h Chip8GUI.cpp Chip8GUI.h VMTests.cpp Chip8Test.cpp Chip8Test.h)
-set(BASE_SOURCE_FILES Chip8.cpp Chip8.h)
-set(GUI_SOURCE_FILES main.cpp Chip8GUI.cpp Chip8GUI.h Chip8Constants.h Color.h FontSprites.cpp FontSprites.h)
+#set(SOURCE_FILES main.cpp Chip8.cpp Chip8.h DetailedGUI.cpp DetailedGUI.h VMTests.cpp Chip8Test.cpp Chip8Test.h)
+set(BASE_SOURCE_FILES Chip8VM.cpp Chip8VM.h)
+set(GUI_SOURCE_FILES main.cpp DetailedGUI.cpp DetailedGUI.h Chip8Constants.h Color.h GUITextPrinter.cpp GUITextPrinter.h C8GUI.h SimpleGUI.cpp SimpleGUI.h HexKeyboardMap.cpp HexKeyboardMap.h Controller.cpp Controller.h SDLInterface.cpp SDLInterface.h)
 set(TEST_FILES VMTests.cpp)
 
 add_executable(Chip8_Emulator ${BASE_SOURCE_FILES} ${GUI_SOURCE_FILES})
